syntax = "proto3";
package dhpc.data;

option go_package = "Dhpc/x/data/types";

message Data {
  string address = 1; 
  string owner = 2; 
  string network = 3; 
  uint64 dateAdded = 4; 
  uint64 dateUpdated = 5; 
  uint64 blockValidity = 6;
  string event = 7; 
  int32 score = 8; 
  uint64 hit = 9; 
  string hash = 10;

}

