syntax = "proto3";

package dhpc.data;

option go_package = "Dhpc/x/data/types";

// Msg defines the Msg service.
service Msg {
  rpc AddData    (MsgAddData   ) returns (MsgAddDataResponse   );
  rpc DeleteData (MsgDeleteData) returns (MsgDeleteDataResponse);
}
message MsgAddData {
  string creator = 1;
  string address = 2;
  string owner   = 3;
  string network = 4;
  string method  = 5;
  int32  score   = 6;
  string hash    = 7;
}

message MsgAddDataResponse {}

message MsgDeleteData {
  string creator = 1;
  string address = 2;
  string owner   = 3;
  string network = 4;
}

message MsgDeleteDataResponse {}

